syntax = "proto3";
import "aa.proto";

message mymsg1
{
	message my
	{
		uint32 len = 1;
	}
	uint32 len = 1;
	repeated string typ = 2;
	repeated my msg=3;
	my mes=4;
}

message mymsg
{
	fixed32 len = 1;
	repeated  fixed32 typ = 2;
}

message mymsg2
{
	uint32 len = 1;
	uint32 typ = 2;
	map<uint32,string> str = 3;
}

message mymsg3
{
	test tt = 1;
}



